--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <html>
-	<head><title></title></head>
-	<body></body>
+	<head>
+		<title></title>
+	</head>
+	<body>
+		<h1>Hi..I am header 1</h1>
+		<h2>Me 2</h2>
+		<h3>Don't forget me...I am 3</h3>
+		<h4>Hi...4</h4>
+		<h5>5</h5>
+		<h6>Small...i.e.6</h6>
+		<p>I am a Paragraph</p>
+	</body>
 </html>
